--- a/endnote.bib
+++ b/endnote.bib
@@ -460,6 +460,25 @@ Negative gossip about a person renders that person’s face more visible to the 
 	pmid = {21596956}
 }
 
+
+@article{stein_no_2017,
+	title = {No impact of affective person knowledge on visual awareness: Evidence from binocular rivalry and continuous flash suppression},
+	volume = {17},
+	issn = {1931-1516(Electronic),1528-3542(Print)},
+	doi = {10.1037/emo0000305},
+	shorttitle = {No impact of affective person knowledge on visual awareness},
+	abstract = {Stimuli with intrinsic emotional value, like emotional faces, and stimuli associated with reward and punishment are often prioritized in visual awareness relative to neutral stimuli. Recently, Anderson, Siegel, Bliss-Moreau, and Barrett (2011) demonstrated that simply associating a face with affective knowledge can also influence visual awareness. Using a binocular rivalry task ({BR}), where a face was shown to one eye and a house to the other, they found that faces paired with negative versus neutral and positive behaviors dominated visual awareness. We were interested in whether faces associated with negative information would also be capable of reaching awareness more quickly in the first place. To test this, we set out to replicate Anderson and colleagues’ finding and to examine whether it would extend to breaking continuous flash suppression (b-{CFS}), a technique where a dynamic mask shown to one eye initially suppresses the stimulus shown to the other eye. Participants completed a learning task followed by {BR} and b-{CFS} tasks, in counterbalanced order. Across both tasks, faces associated with negative behaviors were treated no differently from faces associated with neutral or positive behaviors. However, faces associated with any type of behavior were prioritized in awareness over novel faces. These findings indicate that while familiarity influences conscious perception, the influence of affective person knowledge on visual awareness is more circumscribed than previously thought. ({PsycInfo} Database Record (c) 2020 {APA}, all rights reserved)},
+	pages = {1199--1207},
+	number = {8},
+	journaltitle = {Emotion},
+	author = {Stein, Timo and Grubb, Caitlyn and Bertrand, Maria and Suh, Seh Min and Verosky, Sara C.},
+	date = {2017},
+	note = {Place: {US}
+Publisher: American Psychological Association},
+	keywords = {Awareness, Emotion Recognition, Face Perception, Visual Perception},
+	file = {Snapshot:/home/hcp4715/Zotero/storage/J22DCIDN/2017-16352-001.html:text/html}
+}
+
 @article{gantman_moral_2014,
 	title = {The moral pop-out effect: Enhanced perceptual awareness of morally relevant stimuli},
 	volume = {132},
@@ -945,4 +964,79 @@ Negative gossip about a person renders that person’s face more visible to the 
 	date = {2018-01-01},
 	langid = {english},
 	keywords = {In-group prioritisation, Self representation, Self-bias, Social attention, Social identity}
+}
+
+
+@article{hofmann_morality_2014,
+	title = {Morality in everyday life},
+	volume = {345},
+	rights = {Copyright © 2014, American Association for the Advancement of Science},
+	issn = {0036-8075, 1095-9203},
+	url = {https://science.sciencemag.org/content/345/6202/1340},
+	doi = {10.1126/science.1251560},
+	abstract = {Moral homeostasis in real life vs. the lab
+Individuals who witnessed a moral deed are more likely than nonwitnesses to perform a moral deed themselves and are also more likely to allow themselves to act immorally. Hofmann et al. asked smartphone users to report their encounters with morality (see the Perspective by Graham). Most moral judgment experiments are lab-based and don't allow for conclusions based on what people experience in their daily lives. This field experiment revealed that people experience moral events frequently in daily life. A respondent's ideology influenced the kind of event reported and the frequency, which is consistent with moral foundations theory.
+Science, this issue p. 1340; see also p. 1242
+The science of morality has drawn heavily on well-controlled but artificial laboratory settings. To study everyday morality, we repeatedly assessed moral or immoral acts and experiences in a large (N = 1252) sample using ecological momentary assessment. Moral experiences were surprisingly frequent and manifold. Liberals and conservatives emphasized somewhat different moral dimensions. Religious and nonreligious participants did not differ in the likelihood or quality of committed moral and immoral acts. Being the target of moral or immoral deeds had the strongest impact on happiness, whereas committing moral or immoral deeds had the strongest impact on sense of purpose. Analyses of daily dynamics revealed evidence for both moral contagion and moral licensing. In sum, morality science may benefit from a closer look at the antecedents, dynamics, and consequences of everyday moral experience.
+Seeing, performing, or receiving a moral act influences how people behave later that day. [Also see Perspective by Graham]
+Seeing, performing, or receiving a moral act influences how people behave later that day. [Also see Perspective by Graham]},
+	pages = {1340--1343},
+	number = {6202},
+	journaltitle = {Science},
+	author = {Hofmann, Wilhelm and Wisneski, Daniel C. and Brandt, Mark J. and Skitka, Linda J.},
+	urldate = {2020-10-24},
+	date = {2014-09-12},
+	langid = {english},
+	pmid = {25214626}
+}
+
+@incollection{monin_dynamic_2009,
+	location = {New York, {NY}, {US}},
+	title = {The dynamic moral self: A social psychological perspective},
+	isbn = {978-0-521-71927-8 978-0-521-89507-1 978-0-511-59070-2},
+	shorttitle = {The dynamic moral self},
+	abstract = {This chapter takes up a social psychological account of the moral self. After challenging a self-consistency view of moral identity, the authors draw a distinction among three other possible meanings: moral identity as a normative ideal (a type of identity that has deeply integrated moral values and leads to an exemplary life); moral identity as a stable personality variable (how much one sees the self as a moral person); and moral identity as a dynamic and reflective self-image (a fluctuating sense of one's morality at any given moment). As social psychologists, they focused on the third meaning. They argue that everyday situations and behaviors affect our moral self-regard from moment to moment, and that this fluctuating self-regard in turn affects later behavior. They review empirical evidence to show that that when people are made secure about their morality--in the sense that they have already demonstrated their "moral credentials"--they sometimes act less morally. They also find that people sometimes boost their moral self-image to compensate for failure in other domains. When the behavior of moral exemplars is seen as an indictment of other people's choices, they are disliked rather than admired. ({PsycINFO} Database Record (c) 2019 {APA}, all rights reserved)},
+	pages = {341--354},
+	booktitle = {Personality, identity, and character: Explorations in moral psychology},
+	publisher = {Cambridge University Press},
+	author = {Monin, Benoît and Jordan, Alexander H.},
+	date = {2009},
+	doi = {10.1017/CBO9780511627125.016},
+	keywords = {Morality, Personality, Self-Concept, Self-Esteem, Self-Regard, Social Behavior, Social Psychology, Social Values}
+}
+
+
+@article{klein_maybe_2016,
+	title = {Maybe holier, but definitely less evil, than you: Bounded self-righteousness in social judgment},
+	volume = {110},
+	issn = {1939-1315(Electronic),0022-3514(Print)},
+	doi = {10.1037/pspa0000050},
+	shorttitle = {Maybe holier, but definitely less evil, than you},
+	abstract = {Few biases in human judgment are easier to demonstrate than self-righteousness: the tendency to believe one is more moral than others. Existing research, however, has overlooked an important ambiguity in evaluations of one’s own and others’ moral behavior that could lead to an overly simplistic characterization of self-righteousness. In particular, moral behavior spans a broad spectrum ranging from doing good to doing bad. Self-righteousness could indicate believing that one is more likely to do good than others, less likely to do bad, or both. Based on cognitive and motivational mechanisms, we predicted an asymmetry in the degree of self-righteousness such that it would be larger when considering unethical actions (doing bad) than when considering ethical actions (doing good). A series of experiments confirmed this prediction. A final experiment suggests that this asymmetry is partly produced by the difference in perspectives that people adopt when evaluating themselves and others (Experiment 8). These results all suggest a bounded sense of self-righteousness. Believing one “less evil than thou” seems more reliable than believing one is “holier than thou.” ({PsycINFO} Database Record (c) 2016 {APA}, all rights reserved)},
+	pages = {660--674},
+	number = {5},
+	journaltitle = {Journal of Personality and Social Psychology},
+	author = {Klein, Nadav and Epley, Nicholas},
+	date = {2016},
+	note = {Place: {US}
+Publisher: American Psychological Association},
+	keywords = {Egocentrism, Judgment, Morality, Self-Esteem, Self-Evaluation, Social Cognition}
+}
+
+
+@article{henrich_weirdest_2010,
+	title = {The weirdest people in the world?},
+	volume = {33},
+	issn = {1469-1825, 0140-525X},
+	doi = {10.1017/S0140525X0999152X},
+	abstract = {Behavioral scientists routinely publish broad claims about human psychology and behavior in the world's top journals based on samples drawn entirely from Western, Educated, Industrialized, Rich, and Democratic ({WEIRD}) societies. Researchers – often implicitly – assume that either there is little variation across human populations, or that these “standard subjects” are as representative of the species as any other population. Are these assumptions justified? Here, our review of the comparative database from across the behavioral sciences suggests both that there is substantial variability in experimental results across populations and that {WEIRD} subjects are particularly unusual compared with the rest of the species – frequent outliers. The domains reviewed include visual perception, fairness, cooperation, spatial reasoning, categorization and inferential induction, moral reasoning, reasoning styles, self-concepts and related motivations, and the heritability of {IQ}. The findings suggest that members of {WEIRD} societies, including young children, are among the least representative populations one could find for generalizing about humans. Many of these findings involve domains that are associated with fundamental aspects of psychology, motivation, and behavior – hence, there are no obvious a priori grounds for claiming that a particular behavioral phenomenon is universal based on sampling from a single subpopulation. Overall, these empirical patterns suggests that we need to be less cavalier in addressing questions of human nature on the basis of data drawn from this particularly thin, and rather unusual, slice of humanity. We close by proposing ways to structurally re-organize the behavioral sciences to best tackle these challenges.},
+	pages = {61--83},
+	number = {2},
+	journaltitle = {Behavioral and Brain Sciences},
+	author = {Henrich, Joseph and Heine, Steven J. and Norenzayan, Ara},
+	urldate = {2020-09-18},
+	date = {2010-06},
+	langid = {english},
+	note = {Publisher: Cambridge University Press},
+	keywords = {culture, evolutionary psychology, behavioral economics, experiments, external validity, generalizability, cross-cultural research, cultural psychology, human universals, population variability}
 }
