--- a/Notebook_Pos_Self_Salience_APA.rmd
+++ b/Notebook_Pos_Self_Salience_APA.rmd
@@ -79,73 +79,46 @@ knitr::opts_chunk$set(cache.extra = knitr::rand_seed)
 
 [sentences in bracket are key ideas]
 
-[Morality is the central of human social life]. Its importance is manifested in many ways in human cognition. For example, morality is a basic dimension of person perception [@goodwin_moral_2014; @goodwin_moral_2015; @abele_navigating_2020; @willis_first_2006], moral judgment is common in daily life [].
+[Morality is the central of human social life]. Its importance is manifested in many ways in human cognition. For example, moral judgment is common in adults' everyday life [e.g., @hofmann_morality_2014]. One important aspect of morality is in person perception, i.e., how people form impression of people (self and others). Moral character is a basic dimension of person perception [@goodwin_moral_2014; @goodwin_moral_2015; @abele_navigating_2020; @willis_first_2006].
 
-[Given the importance of morality in social life, moral character, i.e., the ...., is crucial for individual.] More specially, a person needs to both accurately evaluate whether the moral character of others and behave in a way that she is perceived as a moral person, or at least not a morally bad person. The former was usually investigated as person perception in social psychology while the latter was studied separately as moral self-concept, moral self-image, or moral self-enhancement. There are abundant of evidence that people weigh morality heavily in evaluating others [@goodwin_moral_2015] and evaluating the change of identity of others []. These findings suggest that, given the importance of morality in social life, morality has been internalized in socialized individuals, and this internalized moral concept influence how they perceiving, remembering, and making decisions. 
+Given the importance of moral character, to successfully navigate in social world, a person needs to both accurately evaluate the moral character of others and behave in a way that she/he is perceived as a moral person, or at least not a morally bad person. The former was traditionally investigated as person perception in social psychology, while the latter was studied separately as moral self concept [@monin_dynamic_2009]. As for the former question, abundant of evidence revealed that people weigh morality heavily in evaluating others [@goodwin_moral_2015] and evaluating the change of identity of others [@strohminger_true_2017]. These findings suggest that morality has been internalized standard for how people perceiving and remembering other people. 
 
-When it comes to self perception, there is accumulating evidence that people actively maintain a good moral-self image. For example,  recent research found that self-enhancement effect is stronger than that in other domains, such as competence or social competence [@tappin_illusion_2017]. Also, participants maintain their moral self-image even after their own unethical behaviors (e.g., cheating)[]. Similarly, when asked how likely they will act ethically or unethically, most participants showed the tendency of less likely to do unethical things []. In other words, existing evidence supported the notion that morality is important in person perception and self-concept, people are motivated to maintain a good moral-self image.
+When it comes to self perception, there is accumulating evidence that people actively maintain a good moral-self image. For example, recent research found that self-enhancement effect is stronger than that in competence or sociability [@tappin_illusion_2017]. Also, participants maintain their moral self-image even after their own unethical behaviors (e.g., cheating)[@monin_dynamic_2009]. Similarly, when asked how likely they will act ethically or unethically, most participants showed the tendency of less likely to do unethical things [@klein_maybe_2016]. In other words, existing evidence supported the notion that morality is important in person perception and self-concept, people are motivated to maintain a good moral-self image.
 
-[whether moral character information influence perception?, link to exp1a, b, c, and exp2] Yet, as @freeman_dynamic_2011 put it, the focus of the previous studies is not to explain the perceptual process, rather, they are explaining the higher-order social cognitive processes that come after, e.g., impression, evaluation. That is, current studies on person perception is studies without perceptual process. In other words, the perceptual decision-making process of moral character related information is unknown. Without knowledge of these processes work, we can not have a full picture of how moral information is processed in our cognition. As increasing attention paid to perceptual process of social perception, it's clear that perceptual decision-making is strongly influenced by social factors, such as group-categorization, stereotype [@xiao_perceiving_2016]. Given the importance of moral character and that moral character related information has strong influence on learning and memory [@stanley_moral_2019; @carlson_motivated_2020], one might expect that moral character related information could also play a role in perceptual decision-making.
+[whether moral character information influence perception?, link to exp1a, b, c, and exp2] However, as @freeman_dynamic_2011 put it, the focus of the studies in person perception and moral self-concept is not to explain the perceptual process, rather, they are explaining the higher-order social cognitive processes that come after, e.g., impression, evaluation. That is, current studies on person perception are perception without perceptual process. Without knowledge of perceptual processes, we can not have a full picture of how moral information is processed in our cognition. As an increasing attention is paid to perceptual process underlying social cognition, it's clear that perceptual processes are strongly influenced by social factors, such as group-categorization, stereotype [see @xiao_perceiving_2016;@stolier_functional_2016]. Given the importance of moral character and that moral character related information has strong influence on learning and memory [@stanley_moral_2019; @carlson_motivated_2020], one might expect that moral character related information could also play a role in perceptual process.
 
-[using associative learning task to study the moral character's influence on perception] Though theoretically possible, no empirical studies had directly addressed this issue. There were only a few studies about the temporal dynamics of judging the trustworthiness of face [e.g., @dzhelyova_temporal_2012], but trustworthy is not equal to morality. One difficulty of studying moral character's influence on perceptual decision-making is that moral character is a high-level and hidden state instead of observable feature, one also needs moral information, e.g., behavior history, to infer moral character of a person. For example, @anderson_visual_2011 asked participant to first study the behavioral description of faces and then asked participant to perform a perceptual detection task. They found that faces linked with "bad" social behavior are detected faster (but see). 
+[using associative learning task to study the moral character's influence on perception] Though theoretically possible, no empirical studies had directly addressed this issue. There were only a few studies about the temporal dynamics of judging the trustworthiness of face [e.g., @dzhelyova_temporal_2012], but trustworthy is not equal to morality. One difficulty of studying moral character's influence on perceptual decision-making is that moral character is a high-level and hidden state instead of observable feature. usually, one needs necessary information, e.g., behavior history, to infer moral character of a person. For example, @anderson_visual_2011 asked participant to first study the behavioral description of faces and then asked participant to perform a perceptual detection task. They assumed that by learning the behavioral description of a person (represented by a face), participants could acquire the moral related information about that face, and this association would then bias the perceptual processing of the faces (but see @stein_no_2017). However, one drawback of this approach is that participants may differ greatly when inferring the moral character of the person from behavioral descriptions, given that notion what is morality itself is varying across population [@henrich_weirdest_2010] and those descriptions and faces may themselves are idiosyncratic, therefore, introduced large variation in experimental design.
 
-An alternative is to use abstract semantic concepts to study how these concepts influence perception. After all, abstract concepts of moral character is part of our daily life and it can be used to identify useful constructs in social life. For example, .... Also, different levels of information may form a dynamic network in human brain and visual cues can activate more abstract, non-observable personal traits (e.g., aggressiveness) [@freeman_dynamic_2011; @amodio_social_2019]. If a concept of moral character (e.g., good person) is activated, it should also be able to have influence on perceptual process of the visual cues through the dynamic network, especially when the perceptual decision-making is about the concept-cue association. In this case, abstract concepts of moral character may serve as signal of moral reputation (for others) or moral self-concept. Indeed, previous studies used the moral words and found that moral related information can be perceived faster [@gantman_moral_2014]. If moral character is an important social category, then, as those other social categories (races, education, etc, see @xiao_perceiving_2016), moral character related information might change the perceptual processes.
+An alternative is to use abstract semantic concepts to study how these concepts influence perception. Abstract concepts of moral character is part of our daily life and it can be used to represent rich information. These abstract concepts is part of a dynamic network in which sensory cue, concrete behaviors and other information can activate/inhibit each other (e.g., aggressiveness) [@freeman_dynamic_2011; @amodio_social_2019]. If a concept of moral character (e.g., good person) is activated, it should also be able to influence on the perceptual process of the visual cues through the dynamic network, especially when the perceptual decision-making is about the concept-cue association. In this case, abstract concepts of moral character may serve as signal of moral reputation (for others) or moral self-concept. Indeed, previous studies used the moral words and found that moral related information can be perceived faster [@gantman_moral_2014, but see @firestone_enhanced_2015]. If moral character is an important in person perception, then, just as those other information such as races, education, [see @xiao_perceiving_2016], moral character related information might change the perceptual processes.
 
-Here, we used an associative learning paradigm to study how moral character concept change perceptual decision-making. In this paradigm, simple geometric shapes were paired with different words whose dominant use is to describe the moral character of person. Participants first learn the association between shapes and words, i.e. good-person and triangle, building direct association between high-level, hidden moral character and visual cue. After remembered the associations, they perform a matching task to judge whether the shape-word pair presented on the screen match the association they learned. This paradigm has been used in studying the perceptual process of self-concept, but had also proven useful in studying other concepts like social group [@enock_self_2018]. 
+To investigate the above possibility, we used an associative learning paradigm to study how moral character concept change perceptual decision-making. In this paradigm, simple geometric shapes were paired with different words whose dominant use is to describe the moral character of person. Participants first learn the associations between shapes and words, i.e. triangle is a good-person, i.e., building direct association between high-level, hidden moral characters and visual cues. After remembered the associations, they perform a matching task to judge whether the shape-word pair presented on the screen match the association they learned. This paradigm has been used in studying the perceptual process of self-concept, but had also proven useful in studying other concepts like social group [@enock_self_2018]. By using simple and morally neutral shapes, we controlled the variations caused by visual cues.
 
-Our first question is, whether the words used the in the associative paradigm is really related to the moral character? As we reviewed above, previous theories, especially the interactive dynamic theory, would support this assumption. To validate that moral character concepts activated moral character as a social cue, we used four experiments to explore and validate the paradigm. The first experiment direct adopted associative paradigm and change the words from "self", "other" to "good-person", "neutral-person", and "bad-person". Then, we change the words to the ones that have more explicit moral meaning ("kind-person", "neutral-person", and "evil-person"). Then, as in @anderson_visual_2011, we asked participant to learn the behavioral history of three different names, and then use the names as moral character words. Finally, we also tested that simultaneously present shape-word pair and sequentially present word and shape didn't change the pattern. All of these four experiments showed a robust effect of moral content. 
+Our first question is, whether the words used the in the associative paradigm is really related to the moral character? As we reviewed above, previous theories, especially the interactive dynamic theory, would support this assumption. To validate that moral character concepts activated moral character as a social cue, we used four experiments to explore and validate the paradigm. The first experiment direct adopted associative paradigm and change the words from "self", "other" to "good-person", "neutral-person", and "bad-person". Then, we change the words to the ones that have more explicit moral meaning ("kind-person", "neutral-person", and "evil-person"). Then, as in @anderson_visual_2011, we asked participant to learn the behavioral history of three different names, and then use the names, as moral character words, for associative learning. Finally, we also tested that simultaneously present shape-word pair and sequentially present word and shape didn't change the pattern. All of these four experiments showed a robust effect of moral character, that is, the positive moral character associated stimuli were prioritized. 
 
-[possible explanations: person-based self-categorization vs. stimuli-based valence] Then, we explored the underlying mechanism. Two theoretical frameworks are relevant here. The first one is valence theory, which emphasize the importance of valence in perceptual decision-making. Under this framework, the valence of the stimuli drives the perceptual decision-making. There exists three different sub-theories under this framework: Negativity effect, positivity effect, and valence effect. The first one might be the threaten detection theory, which predicted that threatening stimuli are preferentially processed because of the evolutionary advantage. Though appealing in the first glance, this threat-detection theory itself has been questioned for the evidence on which this theory was initially proposed. That is negative prioritized because of the low-level physical features of the stimuli []. given that the physical stimuli associated with moral character are manipulated in our study, we expect the low level feature will not play a role, and therefore we have a low a priori on the negative first prediction. The second prediction is positivity hypothesis, which predict that positive moral character will be prioritized. There are also evidence consistent with this idea. For example, XXX found that trustworthy faces attracted attention more than untrustworthy faces, probably because trustworthy faces are more likely to be the collaborative partners subsequent tasks, which will bring reward. A third possibility is that both negative and positive is faster than neutral because of the valence. The underlying of the valence assumption is that the stimuli presented in the associative task (word-shape pair) can elicit approaching-avoiding motivation. This probability of this assumption is true is low, because the all these stimuli do not have visual cue that really threatening or rewarding. Therefore, the difference in perceptual decision-making make reflect the value of the words to participants, which can be the interaction of the meaning of the words and the participants' idiosyncratic characteristics. 
+[possible explanations: person-based self-categorization vs. stimuli-based valence] Then, we explored the underlying mechanism. One possible explanation is the value-based attention, which suggested that valuable stimuli is prioritized in our low-level cognitive processes. Because positive moral character is potentially rewarding, e.g., potential cooperators, it is valuable to individuals and therefore being prioritized. There are also evidence consistent with this idea []. For example, XXX found that trustworthy faces attracted attention more than untrustworthy faces, probably because trustworthy faces are more likely to be the collaborative partners subsequent tasks, which will bring reward. This explanation has an implicit assumption, that is, participants were automatically viewing these stimuli as self-relevant [@juechems_where_2019; @reicher_perception_2016] and threatening/rewarding because of their semantic meaning. In this explanation, we will view the moral concept, and the moral character represented by the concept, as objects and only judge whether they are rewarding/threatening or potentially rewarding/threatening to us. A different view is that we will perceive those moral character as person and apply social categorization, i.e., we categorize whether the person with the moral character is in the same group as we do [@turner_self_1994]. However, the above four experiments can not distinguish between these two possibilities, because there are evidence for both reward- [e.g., @Sui_2012_JEPHPP] and in-group [@enock_self_2018] prioritization.  
 
-Previous research converged that, if an object to be of value to an individual, then that object must be judged as relevant to that individual, i.e., self-relevance [@juechems_where_2019; @reicher_perception_2016]. There are two possible way an external stimuli be valuable (relevant) for an individual. First, we might evaluate its rewarding-threatening value, as many previous perceptual research had done. In this explanation, we will view the moral character and the person behind the moral character, as objects and only judge whether they are rewarding or potentially rewarding to us. A different view is that we will still perceive those moral character as human and apply social categorization, i.e., we categorize whether the person behind the moral character is in the same group as we do. However, the above four experiments can not distinguish between these two possibilities, because there are evidence for both reward [@Sui_2012_JEPHPP] and in-group [@enock_self_2018] prioritization.  
+[Distinguish two explanations by make self salient, exp3a, 3b, 6b] Though these two frameworks can both account for the positivity effect found in first four experiments (i.e., prioritization of "good-person", but not "neutral person" and "bad person"), they have different prediction if the experiment design include both identity and moral valence where the valence (good, bad, and neutral) conditions can describe both self and other. In this case the identity become salient and participants are less likely to spontaneously identify a good-person other than self as in-group, but the value of good-person still exists. This means that the social categorization theory predicts participants prioritize good-self but not good-other, while reward-based attention theory predicts participants are both prioritized. Also, as in @Hu_2020_GoodSelf, people may also only identify with good-self instead of bad self. That is, people will show a unique pattern of self-identification: only good-self is identified as "self" while all the others categories were excluded.
 
-[Distinguish two explanations by make self salient, and found relative adv of self: exp3a, 3b, 6b] Though these two framework has similar prediction for the studies with moral character such as "good-person", "neutral person", and "bad person", they have different prediction when if the experiment design include both identity and moral valence. With an orthogonal design, we have good, bad, and neutral conditions for both self and other. In this case the identity become salient and participants are less likely to spontaneously identify good-person as self, but the value of good-person still exists. This means that the social categorization theory predicts participants prioritize good-self but not good-other, while reward-based attention theory predicts participants are both prioritized. Also, as in @Hu_2020_GoodSelf, people may also only identify with good-self instead of neutral or bad self. That is, people will show a unique pattern of self-identification: only good-self is identified as "self" while all the others categories were excluded.
+In exp 3a, 3b, and 6b, we found that (1) good-self is always faster than neutral-self and bad-self, but good-other only have weak to null advantage to neutral-other and bad-other. which mean the social categorization is self-centered. (2) good-self's advantage over good other only occur when self- and other- were in the same task. i.e. the relative advantage is competition based instead of absolute. These three experiments suggest that people more like to view the moral character stimuli as person and categorize good-self as an unique category against all others. A mini-meta-analysis showed that there was no effect of valence when the identity is other.
 
-In exp 3a, 3b, and 6b, we found that (1) good-self is always faster than neutral-self and bad-self, but good-other only have weak to null advantage to neutral-other and bad-other. which mean the social categorization is self-centered. (2) good-self's advantage over good other only occur when self- and other- were in the same task. i.e. the relative advantage is competition based instead of absolute. These three experiments suggest that people more like to view the moral character stimuli as person and categorize good-self as an unique category against all others. A meta-analysis showed that there was no effect of valence when the identity is other.
+[what we care? valence of the self exp4a or identity of the good exp4b?] Next, we go further to disentangle the good-self complex: people care more about whether the self is good, or whether the good is self, or both? If people care more about whether the self is good, then, subtle cue of the valence may have an impact on perceptual process of the self. In contrast, if people care more about whether the good's identity, i.e., whether the good is self, then subtle cue of identity (self v. other) may have a impact on perceptual process of the good. We tested the good-self complex with two more experiments. In exp 4a (id is task-relevant, valence is task-irrelevant), if people care about the valence of the self, then, the task-irrelevant information may influence the processing of the self. While in exp 4b (valence is task-relevant, id is task-irrelevant), if people care about the id of the good, then, the task-irrelevant id information will has a influence on the process of the good.
 
-[what we care? valence of the self exp4a or identity of the good exp4b?] Next, we go further to disentangle the self-good complex: people care more about whether the self is good, or whether the good is self, or both? If people care more about whether the self is good, then, subtle cue of the valence may have an impact on perceptual process of the self. In contrast, if people care more about whether the good's identity, i.e., whether the good is self, then subtle cue of identity (self v. other) may have a impact on percpetual process of the good. We tested the good-self complex with two more experiments. In exp 4a (id is task-relevant, valence is task-irrelevant), if people care about the valence of the self, then, the task-irrelevant information may influence the processing of the self. While in exp 4b (valence is task-relevant, id is task-irrelevant), if people care about the id of the good, then, the task-irrelevant id information will has a influence on the process of the good.
+[Good self in self-reported data] As an exploration, we also collected participants' self-reported psychological distance between self and good-person, bad-person, and neutral-person. We explored the general pattern and the correlation between self-reported distance and reaction-based indices.
 
-[whether categorize self as positive is not limited to morality? no, but limited to traits, yet not state] Self-categorization is not limited to morality, even morality is central to social life. we used aesthetic aspect as another instance. 
+[whether categorize self as positive is not limited to morality] Finally, we explored the pattern is generalized to all positive traits or only to morality. We found that self-categorization is not limited to morality, even morality is central to social life. we used aesthetic aspect as another instance. 
 
-[Self-bad as an index of self-reported self-categorization in moral term]
-
-Below are just my thoughts
-Still need to thinking about the relationship between several key concepts: self-categorization, morality (moral character), perceptual decision-making, interactive dynamic theory.
-
-As previous studies in social psychology and cognitive psychology found the perceiving self and perceiving others has huge difference, therefore, a question immediately followed is, how the self- and other-related moral character information are processed in perceptual decision-making. To investigate this phenomenon, we included both self- and other-related moral character information in the self-tagging paradigm. abstract moral concepts are prioritized in perceptual decision-making? There are several possible predictions. 
-
+Key concepts and discussing points:
 *Self-categories* are cognitive groupings of self and some class of stimuli as identical or different from some other class. [Turner et al.]
 *Personal identity* refers to self-categories that define the individual as a unique person in terms of his or her individual differences from other (in-group) persons.
 *Social identity* refers to the shared social categorical self ("us" vs. "them").
-
 *variable self*: Who we are, how we see ourselves, how we define our relations to others (indeed whether they are construed as ‘other’ or as part of the extended 'we' self) is different in different settings. 
+*Identification*: the degree to which an individual feels connected to an ingroup or includes the ingroup in his or her self-concept. (self is not bad; )
+Morality as a way for social-categorization? People are more likely to identify themselves with trustworthy faces [@verosky_differential_2010] (trustworthy faces has longer RTs).
+What is the relation between morally good and self in a semantic network (attractor network) (Freeman & Ambady, 2011).
+How to deal with the *variable self* (self-categorization theory) vs. *core/true/authentic self* vs. *self-enhancement*
 
-variable self and morality in perception. self is variable, morality is basic, the point is: how moral other is perceive as extension of self, not reverse.
-
-categorization based on morality and variable self/identity
-
-What is the prediction of the model/theory?
-
-Identification: the degree to which an individual feels connected to an ingroup or includes the ingroup in his or her self-concept. (self is not bad; )
-
-People are more likely to identify themselves with trustworthy faces [@verosky_differential_2010] (trustworthy faces has longer RTs).
-
-In 1950s, @bruner_perceptual_1957 had proposed the "New Look" approach of perception, which was resurrected by accumulating evidence [@stolier_functional_2016; @xiao_perceiving_2016]. These studies supported the view that there is a bidirectional interplay between perception and higher-level cognition, such as stereotype [@stolier_functional_2016; @xiao_perceiving_2016], and self-relevance [@Sui_2012_JEPHPP]. Few studies also tested whether moral-laden information was prioritized in the perception [@anderson_visual_2011; @gantman_moral_2014]. Still, the moral self-image information has rarely been studied (except @Hu_2020_GoodSelf).
-
-
-Potential theoretical discussion points:
-Close distance of the semantic representation of self and moral character (attractor network) (Freeman & Ambady, 2011).
-The core/true/authentic self concept.
-social meter theory of self-esteem.
-evolutionary perspective of morality and moral self-conception, moral identity.
-
-In our experimental setting, we have the following limitations:
+**Limitations**:
 The perceptual decision-making will show certain pattern under certain task demand. In our case, it's the forced, speed, two-option choice task.
-
-Additional assumption about the self-moral id:
-People will automatically enhance their moral concept, therefore prefer the positive moral self-concept.
-
-
 
 # Disclosures
 We reported all the measurements, analyses, and results in all the experiments in the current study. Participants whose overall accuracy lower than 60% were excluded from analysis. Also, the accurate responses with less than 200ms reaction times were excluded from the analysis.  
