--- a/Notebook_Pos_Self_Salience_APA.rmd
+++ b/Notebook_Pos_Self_Salience_APA.rmd
@@ -79,13 +79,31 @@ knitr::opts_chunk$set(cache.extra = knitr::rand_seed)
 
 [sentences in bracket are key ideas]
 
-[Morality is the central of human social life]. Its importance is manifested in many ways in human cognition. For example, moral judgment is common in adults' everyday life [e.g., @hofmann_morality_2014]. One important aspect of morality is in person perception, i.e., how people form impression of people (self and others). Moral character is a basic dimension of person perception [@goodwin_moral_2014; @goodwin_moral_2015; @abele_navigating_2020; @willis_first_2006].
+[Morality is the central of human social life]. People make substantial amount of moral judgment in everyday life [e.g., @hofmann_morality_2014]. When making these judgments, people not only judge others behavior but, more importantly, others' character [@uhlmann_person-centered_2015]. That is, moral judgment is a way that we get information about other in the society, so that we can distinguish the good from the bad. This align with studies of person-perception in which moral character is a basic dimension of person perception in social life[@goodwin_moral_2014; @goodwin_moral_2015; @abele_navigating_2020; @willis_first_2006].
 
-Given the importance of moral character, to successfully navigate in social world, a person needs to both accurately evaluate the moral character of others and behave in a way that she/he is perceived as a moral person, or at least not a morally bad person. The former was traditionally investigated as person perception in social psychology, while the latter was studied separately as moral self concept [@monin_dynamic_2009]. As for the former question, abundant of evidence revealed that people weigh morality heavily in evaluating others [@goodwin_moral_2015] and evaluating the change of identity of others [@strohminger_true_2017]. These findings suggest that morality has been internalized standard for how people perceiving and remembering other people. 
+## Morality as social categorization 
+
+[@mchugh_moral_2019]: Moral judgment as categorization (MJAC);
+person-centered moral judgment
+person-perception
+
+People attribute the punishment to moral character instead of environmental factors [@dunlea_childrens_2020].
+
+## Self as an object of moral categorization: I am a good person
+Social life: treat people the same way as we expect people to treat yourself.
+a person needs to both accurately evaluate others' moral character and behave in a way that she/he is perceived as a moral person, or at least not a morally bad person.
+Motivation to maintain good-self
+
+## From good me to good us: Spontaneous good-self referential in moral categorization
+Integrate self-categorization in moral judgment: an implicit good-me/good-we assumption (Role of self in attractor model)
+
+*self-categorization* and *variable self*
+
+Given the importance of moral character, to successfully navigate in social world, a person needs to both accurately evaluate others' moral character and behave in a way that she/he is perceived as a moral person, or at least not a morally bad person. The former was traditionally investigated as person perception in social psychology, while the latter was studied separately as moral self concept [@monin_dynamic_2009]. As for the former question, abundant of evidence revealed that people weigh morality heavily in evaluating others [@goodwin_moral_2015] and evaluating the change of identity of others [@strohminger_true_2017]. These findings suggest that morality has been internalized standard for how people perceiving and remembering other people. 
 
 When it comes to self perception, there is accumulating evidence that people actively maintain a good moral-self image. For example, recent research found that self-enhancement effect is stronger than that in competence or sociability [@tappin_illusion_2017]. Also, participants maintain their moral self-image even after their own unethical behaviors (e.g., cheating)[@monin_dynamic_2009]. Similarly, when asked how likely they will act ethically or unethically, most participants showed the tendency of less likely to do unethical things [@klein_maybe_2016]. In other words, existing evidence supported the notion that morality is important in person perception and self-concept, people are motivated to maintain a good moral-self image.
 
-[whether moral character information influence perception?, link to exp1a, b, c, and exp2] However, as @freeman_dynamic_2011 put it, the focus of the studies in person perception and moral self-concept is not to explain the perceptual process, rather, they are explaining the higher-order social cognitive processes that come after, e.g., impression, evaluation. That is, current studies on person perception are perception without perceptual process. Without knowledge of perceptual processes, we can not have a full picture of how moral information is processed in our cognition. As an increasing attention is paid to perceptual process underlying social cognition, it's clear that perceptual processes are strongly influenced by social factors, such as group-categorization, stereotype [see @xiao_perceiving_2016;@stolier_functional_2016]. Given the importance of moral character and that moral character related information has strong influence on learning and memory [@stanley_moral_2019; @carlson_motivated_2020], one might expect that moral character related information could also play a role in perceptual process.
+[whether moral character information influence perception?, link to exp1a, b, c, and exp2] However, as @freeman_dynamic_2011 put it, the focus of the studies in person perception and moral self-concept is not to explain the perceptual process, rather, they are explaining the higher-order social cognitive processes that come after. That is, current studies on person perception are perception without perceptual process. Without knowledge of perceptual processes, we can not have a full picture of how moral information is processed in our cognition. As an increasing attention is paid to perceptual process underlying social cognition, it's clear that perceptual processes are strongly influenced by social factors, such as group-categorization, stereotype [see @xiao_perceiving_2016;@stolier_functional_2016]. Given the importance of moral character and that moral character related information has strong influence on learning and memory [@stanley_moral_2019; @carlson_motivated_2020], one might expect that moral character related information could also play a role in perceptual process.
 
 [using associative learning task to study the moral character's influence on perception] Though theoretically possible, no empirical studies had directly addressed this issue. There were only a few studies about the temporal dynamics of judging the trustworthiness of face [e.g., @dzhelyova_temporal_2012], but trustworthy is not equal to morality. One difficulty of studying moral character's influence on perceptual decision-making is that moral character is a high-level and hidden state instead of observable feature. usually, one needs necessary information, e.g., behavior history, to infer moral character of a person. For example, @anderson_visual_2011 asked participant to first study the behavioral description of faces and then asked participant to perform a perceptual detection task. They assumed that by learning the behavioral description of a person (represented by a face), participants could acquire the moral related information about that face, and this association would then bias the perceptual processing of the faces (but see @stein_no_2017). However, one drawback of this approach is that participants may differ greatly when inferring the moral character of the person from behavioral descriptions, given that notion what is morality itself is varying across population [@henrich_weirdest_2010] and those descriptions and faces may themselves are idiosyncratic, therefore, introduced large variation in experimental design.
 
