--- a/endnote.bib
+++ b/endnote.bib
@@ -1040,3 +1040,89 @@ Publisher: American Psychological Association},
 	note = {Publisher: Cambridge University Press},
 	keywords = {culture, evolutionary psychology, behavioral economics, experiments, external validity, generalizability, cross-cultural research, cultural psychology, human universals, population variability}
 }
+
+
+@article{firestone_enhanced_2015,
+	title = {Enhanced visual awareness for morality and pajamas? Perception vs. memory in ‘top-down’ effects},
+	volume = {136},
+	issn = {00100277},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S0010027714002157},
+	doi = {10.1016/j.cognition.2014.10.014},
+	shorttitle = {Enhanced visual awareness for morality and pajamas?},
+	abstract = {A raft of prominent ﬁndings has revived the notion that higher-level cognitive factors such as desire, meaning, and moral relevance can directly affect what we see. For example, under conditions of brief presentation, morally relevant words reportedly ‘‘pop out’’ and are easier to identify than morally irrelevant words. Though such results purport to show that perception itself is sensitive to such factors, much of this research instead demonstrates effects on visual recognition—which necessarily involves not only visual processing per se, but also memory retrieval. Here we report three experiments which suggest that many alleged top-down effects of this sort are actually effects on ‘back-end’ memory rather than ‘front-end’ perception. In particular, the same methods used to demonstrate popout effects for supposedly privileged stimuli (such as morality-related words, e.g. ‘‘punishment’’ and ‘‘victim’’) also yield popout effects for unmotivated, superﬁcial categories (such as fashion-related words, e.g. ‘‘pajamas’’ and ‘‘stiletto’’). We conclude that such effects reduce to well-known memory processes (in this case, semantic priming) that do not involve morality, and have no implications for debates about whether higher-level factors inﬂuence perception. These case studies illustrate how it is critical to distinguish perception from memory in alleged ‘top-down’ effects.},
+	pages = {409--416},
+	journaltitle = {Cognition},
+	shortjournal = {Cognition},
+	author = {Firestone, Chaz and Scholl, Brian J.},
+	urldate = {2020-10-26},
+	date = {2015-03},
+	langid = {english},
+	file = {Firestone and Scholl - 2015 - Enhanced visual awareness for morality and pajamas.pdf:/home/hcp4715/Zotero/storage/C2FS4XN4/Firestone and Scholl - 2015 - Enhanced visual awareness for morality and pajamas.pdf:application/pdf}
+}
+
+
+@article{turner_self_1994,
+	title = {Self and Collective: Cognition and Social Context},
+	volume = {20},
+	issn = {0146-1672},
+	url = {https://doi.org/10.1177/0146167294205002},
+	doi = {10.1177/0146167294205002},
+	shorttitle = {Self and Collective},
+	abstract = {The relationship between the self and the collective is discussed from the perspective of self-categorization theory. Self-categorization theory makes a basic distinction between personal and social identity as different levels of self-categorization. It shows how the emergent properties of group processes can be explained in terms of a shift in self perception from personal to social identity. It also elucidates how self-categorization varies with the social context. It argues that self-categorizing is inherently variable, fluid, and context dependent, as sedf-categories are social comparative and are always relative to a frame of reference. This notion has major implications for accepted ways of thinking about the self: The variability of self-categorizing provides the perceiver with behavioral and cognitive flexibility and ensures that cognition is always shaped by the social context in which it takes place.},
+	pages = {454--463},
+	number = {5},
+	journaltitle = {Personality and Social Psychology Bulletin},
+	shortjournal = {Pers Soc Psychol Bull},
+	author = {Turner, John C. and Oakes, Penelope J. and Haslam, S. Alexander and {McGarty}, Craig},
+	urldate = {2020-10-18},
+	date = {1994-10-01},
+	langid = {english},
+	note = {Publisher: {SAGE} Publications Inc},
+	file = {SAGE PDF Full Text:/home/hcp4715/Zotero/storage/A2856GQ8/Turner et al. - 1994 - Self and Collective Cognition and Social Context.pdf:application/pdf}
+}
+
+
+@article{uhlmann_person-centered_2015,
+	title = {A Person-Centered Approach to Moral Judgment:},
+	rights = {© The Author(s) 2014},
+	url = {https://journals.sagepub.com/doi/10.1177/1745691614556679},
+	doi = {10.1177/1745691614556679},
+	shorttitle = {A Person-Centered Approach to Moral Judgment},
+	abstract = {Both normative theories of ethics in philosophy and contemporary models of moral judgment in psychology have focused almost exclusively on the permissibility of...},
+	journaltitle = {Perspectives on Psychological Science},
+	author = {Uhlmann, Eric Luis and Pizarro, David A. and Diermeier, Daniel},
+	urldate = {2020-10-27},
+	date = {2015-01-14},
+	langid = {english},
+	note = {Publisher: {SAGE} {PublicationsSage} {CA}: Los Angeles, {CA}}
+}
+
+
+@report{mchugh_moral_2019,
+	title = {Moral Judgment as Categorization ({MJAC})},
+	url = {https://psyarxiv.com/72dzp/},
+	institution = {{PsyArXiv}},
+	author = {{McHugh}, Cillian and {McGann}, Marek and Igou, Eric R. and Kinsella, Elaine},
+	urldate = {2020-10-27},
+	date = {2019-09-17},
+	doi = {10.31234/osf.io/72dzp},
+	keywords = {categorisation, category formation, Cognitive Psychology, Concepts and Categories, Judgment and Decision Making, Moral Behavior, moral judgements, morality, Social and Behavioral Sciences, Social and Personality Psychology}
+}
+
+
+@article{dunlea_childrens_2020,
+	title = {Children's and adults' understanding of punishment and the criminal justice system},
+	volume = {87},
+	issn = {0022-1031},
+	url = {http://www.sciencedirect.com/science/article/pii/S0022103119304494},
+	doi = {10.1016/j.jesp.2019.103913},
+	abstract = {Adults' judgments regarding punishment can have important social ramifications. However, the origins of these judgments remain unclear. Using the legal system as an example domain in which people receive punishment, the current work employed two complementary approaches to examine how punishment-related concepts emerge. Study 1 tested both 6- to 8-year-olds and adults to ascertain which components of “end-state” punishment concepts emerge early in development and remain stable over time, and which components of punishment concepts change with age. Children, like adults, agreed with and spontaneously generated behavioral explanations for incarceration. However, children were more likely than adults to attribute incarceration to internal characteristics. Neither children nor adults reported that incarceration stems from societal-level factors such as poverty. Study 2 built on the results of Study 1 by probing the extent to which early punishment-related concepts in the legal domain emerge from a specific form of social experience—namely, parental incarceration. Children of incarcerated parents, like children whose parents were not incarcerated, were more likely to reference internal and behavioral factors than societal factors when discussing why people come into contact with the justice system. Taken together, these studies clarify how punishment-related concepts arise and therefore contribute to theories of moral psychology, social cognitive development, and criminal justice.},
+	pages = {103913},
+	journaltitle = {Journal of Experimental Social Psychology},
+	shortjournal = {Journal of Experimental Social Psychology},
+	author = {Dunlea, James P. and Heiphetz, Larisa},
+	urldate = {2020-10-27},
+	date = {2020-03-01},
+	langid = {english},
+	keywords = {Explanation, Incarceration, Morality, Punishment, Social cognitive development}
+}
